--- a/linalg/Cargo.toml
+++ b/linalg/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4.14"
 num-traits = "0.2.14"
 tract-data = { path = "../data" }
 paste = "1.0.5"
+strength_reduce = "0.2.3"
 
 [build-dependencies]
 cc = "1.0.69"
