--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,7 +9,7 @@ jobs:
   linux:
     strategy:
       matrix:
-        rust: [ 1.59.0, stable ]
+        rust: [ 1.59.0 ]
 
     runs-on: ubuntu-latest
 
