add example to workspaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "examples/jupyter-keras-tract-tf2",
     "examples/nnef-dump-mobilenet-v2",
     "examples/nnef-mobilenet-v2",
+    "examples/onnx-blazepose-landmark",
     "examples/onnx-mobilenet-v2",
     "examples/onnx-mobilenet-v2-batch",
     "examples/pytorch-albert-v2",
